manifests/utilities/firefly/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  labels:
    app: firefly
spec:
  selector:
    matchLabels:
      app: firefly
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
      - image: jc5x/firefly-iii:latest
        name: firefly
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
        resources:
          limits:
            memory: 512Mi
