manifests/utilities/firefly/deployment-csv-importer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-csv-importer
  labels:
    app: firefly-csv-importer
spec:
  selector:
    matchLabels:
      app: firefly-csv-importer
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-csv-importer
    spec:
      containers:
        - image: fireflyiii/csv-importer:version-2.3.3
          name: firefly-csv-importer
