manifests/utilities/firefly/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly
spec:
  selector:
    app: firefly
  ports:
  - protocol: TCP
    name: http
    port: 8080
