manifests/utilities/firefly/service-csv-importer.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-csv-importer
spec:
  selector:
    app: firefly-csv-importer
  ports:
  - protocol: TCP
    name: http
    port: 8080
