manifests/utilities/firefly/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - firefly.homelab.dsb.dev
    secretName: firefly-tls
  rules:
  - host: firefly.homelab.dsb.dev
    http:
      paths:
        - backend:
            service:
              name: firefly
              port:
                number: 8080
          path: /
          pathType: Prefix
